installations. This is to favor servers installed manually over those included
with the operating system. [David]

=item *

Added a partial index on the C<comp_time> column of the job table so as to
speed up lookups of jobs yet to be completed. This was originally in a 1.6.7
upgrade script, but never made it into the SQL for new installations.
Suggested by Mark Jaroski. [David]

=back

=head2 Bug Fixes

=over

=item *

The Template Toolkit and HTML::Template burners work again. [David]

=item *

Fixed syntax error in Bric::Util::Trans::SFTP. Reported by Kenneth Marshall.
[David]

=item *

Eliminated "Subroutine Bric::App::Handler::rethrow_exception redefined"
warning during startup with HTML::Mason 1.30. [David]

=item *

Fixed the C<no_site_id> parameter to Bric::Biz::Asset::Formatting when
specified using the C<ANY()> function. [David]

=item *

Having a custom field beginning with a leading underscore was causing
an error in comp/widgets/wrappers/sharky/header.mc. [Scott]

=item *

Errors thrown when setting element field values will not be displayed as error
messages within the context of the element profile, rather than throwing a
fatal exception. This is useful for invalid dates, foe example. [David]

=back

=cut

##############################################################################

=head1 VERSION 1.8.6 (2005-07-19)

=head2 Improvements

=over 4

=item *

Added JavaScript code to validate that the username in the user profile does
not have leading or trailing spaces. [David]

=item *

When started by the super user, F<bric_queued> now runs as the same user as
the Bricolage Apache server. This allows it to run as a user that isn't
otherwise available as a login on the system (such as the typical "nobody" or
"www" user). [David]

=item *

Added support for starting F<bric_queued> in the Linux startup script in
F<contrib/start_scripts/>. [David]

=item *

The C<get_related_story()> and get_related_media() methods of the element